Add CSS styles to the class container, which is the main card game

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <title>Document</title>
 </head>
 
-<body class="">
+<body>
 
     <div class="container">
         <div id="question-container" class="hide">
-            <div id="question">Question</div>
+            <div id="question">Questions</div>
             <div id="answer-buttons" class="btn-grid">
                 <button class="btn">Answer 1</button>
                 <button class="btn">Answer 2</button>
