Add CSS style to the classes button-grid and button and adjust the ratio for background/font color contrasts

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <div class="container">
         <div id="question-container" class="hide">
             <div id="question">Questions</div>
-            <div id="answer-buttons" class="btn-grid">
-                <button class="btn">Answer 1</button>
-                <button class="btn">Answer 2</button>
-                <button class="btn">Answer 3</button>
-                <button class="btn">Answer 4</button>
+            <div id="answer-buttons" class="button-grid">
+                <button class="button">Answer 1</button>
+                <button class="button">Answer 2</button>
+                <button class="button">Answer 3</button>
+                <button class="button">Answer 4</button>
             </div>
         </div>
         <div class="controls">
-            <button id="start-btn" class="start-btn btn">Start</button>
-            <button id="next-btn" class="next-btn btn hide">Next</button>
+            <button id="start-button" class="start-button button">Start</button>
+            <button id="next-button" class="next-button button hide">Next</button>
         </div>
     </div>
 
